// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea/> renders error input 1`] = `
<div
  className="Van-TextInput Van-TextInput--error"
>
  <textarea
    className="Van-TextInput-input"
  >
    hello
  </textarea>
</div>
`;

exports[`<Textarea/> renders error input with error message 1`] = `
<div
  className="Van-TextInput Van-TextInput--error"
>
  <textarea
    className="Van-TextInput-input"
  >
    hello
  </textarea>
  <div
    className="Van-TextInput-error-message"
  >
    My error message
  </div>
</div>
`;

exports[`<Textarea/> renders success input 1`] = `
<div
  className="Van-TextInput Van-TextInput--success"
>
  <textarea
    className="Van-TextInput-input"
  >
    hello
  </textarea>
</div>
`;

exports[`<Textarea/> renders with specific attributes 1`] = `
<div
  className="Van-TextInput"
>
  <textarea
    className="Van-TextInput-input"
    data-id="0"
  >
    
  </textarea>
</div>
`;

exports[`<Textarea/> renders with specific className 1`] = `
<div
  className="Van-TextInput my-class"
>
  <textarea
    className="Van-TextInput-input"
  >
    
  </textarea>
</div>
`;
